--- a/lib/index.html
+++ b/lib/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Simulation</title>
+    <title>Chameleon Graphs</title>
 </head>
 <body>
     
@@ -16,7 +16,7 @@
         }
     </style>
 
-    <!-- Reference water demo -->
+    <!-- Reference main script -->
     <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
