--- a/lib/index.html
+++ b/lib/index.html
@@ -14,6 +14,10 @@
             padding: 0;
             overflow: hidden;     
         }
+
+        canvas:hover{
+            cursor: none;
+        }
     </style>
 
     <!-- Reference main script -->
